aggregate data for 3 days

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "iterator": "cpp",
     "vector": "cpp",
     "string": "cpp",
-    "string_view": "cpp"
+    "string_view": "cpp",
+    "iosfwd": "cpp"
   }
 }
