--- a/website/package.json
+++ b/website/package.json
@@ -8,10 +8,9 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "minify": "html-minifier-terser --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype --minify-css true --minify-js true index.html -o ./build/index.html",
+    "minify": "html-minifier-terser --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype --minify-css true --minify-js true index.html -o ../display/data/index.html",
     "watch": "./node_modules/.bin/live-server .",
-    "build": "npm run minify && cd ../display/data && cp ../../website/build/index.html . && gzip -f index.html",
-    "copy": "cd ../display/data && cp ../../website/index.html ."
+    "build": "npm run minify && gzip -f ../display/data/index.html"
   },
   "dependencies": {
     "html-minifier-terser": "^5.0.2",
